[package]
name = "ohlc"
version = "0.1.0"
authors = ["UninterestinAcc <uninterestinacc@users.noreply.github.com>"]
build = "build/build.rs"

[build-dependencies]
image = "0.17"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
image = "0.17"
tempdir = "0.3"
log = "0.3"
env_logger = "*"
