[package]
name = "ohlc"
version = "0.4.1"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
build = "build/build.rs"

[build-dependencies]
image = { version = "0.17", features = ["png"] }

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
image = { version = "0.17", features = ["png"] }
tempdir = "0.3"
log = "0.3"
env_logger = "*"
