[package]
name = "ohlc-cli"
version = "0.1.0"
authors = ["thinkier <26728734+thinkier@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argh = "^0.1.3"
serde_json = "^1.0"

[dependencies.ohlc]
path = "../../"
